--- a/src/app/modules/dash-board-sidebar/dash-board-sidebar.component.html
+++ b/src/app/modules/dash-board-sidebar/dash-board-sidebar.component.html
@@ -3,7 +3,7 @@
       <div class="sidebar-sticky">
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link" routerLink="/dashboard">
+            <a class="nav-link" routerLink="/homePage">
               <span data-feather="home"></span>
               Home Page <span class="sr-only">(current)</span>
             </a>
