--- a/src/app/modules/home-page-content/home-page-content.component.html
+++ b/src/app/modules/home-page-content/home-page-content.component.html
@@ -4,12 +4,12 @@
       <h2>Bài đăng hot nhất</h2>
       <section class="popular-news-carousel">
         <div id="carousel" class="carousel slide" data-ride="carousel">
-          <div class="carousel-inner">
+          <div class="carousel-inner" >
             <div class="carousel-item active">
               <a routerLink="/detail-post"><img class="d-block w-100" src="../../../../../assets/images/carousel1.jpg"
                   alt="First slide"></a>
               <div class="carousel-caption d-none d-md-block">
-                <h5>Maria ozawa giải nghệ phim sex Nhật Bản</h5>
+                <h5>Truyện hài</h5>
                 <p>29/11/2020</p>
               </div>
             </div>
@@ -117,27 +117,6 @@
         </div>
       </li>
     </ul>
-
-    <aside>
-      <h4>Các thể loại nổi bật</h4>
-      <ul class="ul-recent">
-        <div class="recent-news">
-          <img src="../../../../../assets/images/article1.jpg">
-          <p>Bài đăng về cô giáo Ly</p>
-        </div>
-        <div class="recent-news">
-          <img src="../../../../../assets/images/article1.jpg">
-          <p>Bài đăng về cô giáo Ly</p>
-        </div>
-        <div class="recent-news">
-          <img src="../../../../../assets/images/article1.jpg">
-          <p>Bài đăng về cô giáo Ly</p>
-        </div>
-        <div class="recent-news">
-          <img src="../../../../../assets/images/article1.jpg">
-          <p>Bài đăng về cô giáo Ly</p>
-        </div>
-      </ul>
-    </aside>
+    <app-home-page-side-bar></app-home-page-side-bar>
   </section>
 </main>
