--- a/src/app/modules/profile-user/profile-user.component.html
+++ b/src/app/modules/profile-user/profile-user.component.html
@@ -1,33 +1,88 @@
+<header>
+  <div class="website-header">
+    <img src="../../../../assets/images/mainLogo.png">
+    <h1>Meme Website</h1>
+    <div class="social-icons">
+      <i class="fab fa-facebook-f"></i>
+      <i class="fab fa-twitter"></i>
+      <i class="fab fa-google-plus-g"></i>
+      <i class="fab fa-instagram"></i>
+      <i class="fas fa-rss"></i>
+      <button type="button" class="btn btn-dark" routerLink="/login">Đăng nhập</button>
+      <button type="button" class="btn btn-dark" routerLink="/register">Đăng ký</button>
+    </div>
+    <div class="btn-group" *ngIf="currentUser">
+      <button type="button" class="btn btn-dark dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <img src="https://graph.facebook.com/1530271143788664/picture?width=30&height=30" class="cimg" alt="img">
+      </button>
+      <div class="dropdown-menu dropdown-menu-right">
+        <button class="dropdown-item"routerLink="/profileUser" type="button">Profile User</button>
+        <button class="dropdown-item"routerLink="/postUser" type="button">Post User</button>
+        <button class="dropdown-item" routerLink="/" type="button">Logout</button>
+      </div>
+    </div>
+  </div>
+  <nav class="navbar navbar-expand-md ">
+    <!-- Brand -->
+
+
+    <!-- Toggler/collapsibe Button -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Navbar links -->
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" routerlink="#">Trang chủ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerlink="#">HOT</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerlink="#">Truyện cười</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerlink="#">Võ thuật</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="breaking-news-section">
+    <span id="btext">Bài đăng hot</span>
+    <marquee direction="left">
+      <a routerlink="#" class="breaking-news">
+        <p class="bntime">23 04 2020</p>
+        Những tin tức hài hước nhất về Trump
+      </a>
+      <a routerlink="#" class="breaking-news">
+        <p class="bntime">29 11 2020</p>Kịch tấu của Hoài Linh.
+      </a>
+      <a routerlink="#" class="breaking-news">
+        <p class="bntime">23 12 2020</p>Bộ truyện cười hài hước nhất được phát hành
+      </a>
+    </marquee>
+  </div>
+</header>
+
+<!--profile user-->
+<div class="card mt-4">
+  <div class="card-body">
+      <p>You're logged in with Profile User!</p>
+      <p>Your role is: <strong>{{currentUser.role.role}}</strong></p>
+      <div *ngIf="loading" class="spinner-border spinner-border-sm"></div>
+      <ul *ngIf="userFromApi">
+          <li>Hello {{userFromApi.username}} {{userFromApi.email}}</li>
+      </ul>
+  </div>
+</div>
 
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-12 col-lg-10 col-xl-8 mx-auto">
-      <h2 class="h3 mb-4 page-title">Settings</h2>
       <div class="my-4">
-        <ul class="nav nav-tabs mb-4" id="myTab" role="tablist">
-          <li class="nav-item">
-            <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
-              aria-selected="false">Profile user</a>
-          </li>
-        </ul>
         <form>
-          <div class="row mt-5 align-items-center">
-            <div class="col-md-3 text-center mb-5">
-              <div class="avatar avatar-xl">
-                <img src="./images/avatar.jpg" alt="..." class="avatar-img rounded-circle" />
-              </div>
-            </div>
-            <div class="col">
-              <div class="row align-items-center">
-                <div class="col-md-7">
-                  <h4 class="mb-1">User, Alice</h4>
-                  <p class="small mb-3"><span class="badge badge-dark">Da Nang, Viet Nam</span></p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <hr class="my-4" />
-
           <div class="form-group">
             <label for="inputUsername">Username</label>
             <input type="text" class="form-control" id="inputUsername" placeholder="Lương Hoàng Bảo" />
@@ -58,7 +113,7 @@
               </div>
             </div>
           </div>
-          <button type="submit" class="btn btn-primary">Update</button>
+          <button type="submit" class="btn btn-primary mr-2">Update</button>
           <button type="submit" routerLink="/" class="btn btn-success">Cancel</button>
         </form>
       </div>
@@ -66,3 +121,75 @@
   </div>
 
 </div>
+
+
+<!--footer-->
+<div class="advertise">
+  <img src="../../../../assets/images/advertise.jpeg" alt="Web Hosting" class="advertise-img">
+</div>
+
+<footer id="footer">
+  <div class="list-service container">
+    <div class="first-service">
+      <div class="support">
+        <label class="label-service">Về chúng tôi</label>
+        <ul class="ul-service">
+          <li class="li-service"><a href="#" class="a-service">Bản đồ</a></li>
+          <li class="li-service"><a href="#" class="a-service">Chính sách</a></li>
+          <li class="li-service"><a href="#" class="a-service">Ưu đãi</a></li>
+          <li class="li-service"><a href="#" class="a-service">Điều khoản và luật lệ</a></li>
+          <li class="li-service"><a href="#" class="a-service">Liên lạc</a></li>
+        </ul>
+      </div>
+      <div class="support">
+        <label class="label-service">Hỗ trợ</label>
+        <ul class="ul-service">
+          <li class="li-service"><a href="#" class="a-service">Bản đồ</a></li>
+          <li class="li-service"><a href="#" class="a-service">Chính sách</a></li>
+          <li class="li-service"><a href="#" class="a-service">Ưu đãi</a></li>
+          <li class="li-service"><a href="#" class="a-service">Điều khoản và luật lệ</a></li>
+          <li class="li-service"><a href="#" class="a-service">Liên lạc</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="second-service">
+      <div class="service">
+        <a class="label-service">Dịch vụ</a>
+        <ul class="ul-service">
+          <li class="li-service"><a href="#" class="a-service">Bản đồ</a></li>
+          <li class="li-service"><a href="#" class="a-service">Chính sách</a></li>
+          <li class="li-service"><a href="#" class="a-service">Ưu đãi</a></li>
+          <li class="li-service"><a href="#" class="a-service">Điều khoản và luật lệ</a></li>
+          <li class="li-service"><a href="#" class="a-service">Liên lạc</a></li>
+        </ul>
+      </div>
+      <div class="information">
+        <a class="label-service">Thông tin</a>
+        <ul class="ul-service">
+          <li class="li-service"><a href="#" class="a-service">Bản đồ</a></li>
+          <li class="li-service"><a href="#" class="a-service">Chính sách</a></li>
+          <li class="li-service"><a href="#" class="a-service">Ưu đãi</a></li>
+          <li class="li-service"><a href="#" class="a-service">Điều khoản và luật lệ</a></li>
+          <li class="li-service"><a href="#" class="a-service">Liên lạc</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="detail-us">
+    <div class="text">
+      <a class="title-link">Về chúng tôi </a>&nbsp;<a class="title-link">Dịch vụ khách hàng </a>&nbsp;<a
+        class="title-link">Chính sách </a><a> 2020 web thời trang. Được làm bởi Hoàng Bảo </a>
+      <br>
+      <a class="link">Bản đồ</a> | <a class="link">Điều khoản</a> |
+      <a class="link">Tìm kiếm nhanh</a> | <a class="link">Đặt hàng nhanh</a> | <a class="link">Liên hệ
+        chúng tôi</a>
+    </div>
+    <div class="social">
+      <i class="fab fa-facebook-f"></i>
+      <i class="fab fa-twitter"></i>
+      <i class="fab fa-google-plus-g"></i>
+      <i class="fab fa-instagram"></i>
+      <i class="fas fa-rss"></i>
+    </div>
+  </div>
+</footer>
