--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -114,7 +114,13 @@ nav ul{
 	}
 	.website-header h1{
 		font-size: 15px;
-	}
+  }
+  button {
+    cursor: pointer;
+  }
+  .cimg {
+    border-radius: 50%;
+  }
 	.social-icons{
 		flex-basis: 100%;
 	}
@@ -126,130 +132,6 @@ nav ul{
 		background-image: url(../../../../assets/images/menu.png);
 		z-index: 16;
 	}
-}
-
-
-/*login form*/
-.wrapper {
-  overflow: hidden;
-  width: 500px;
-  background: #fff;
-  padding: 30px;
-  border-radius: 5px;
-  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.1);
-}
-.wrapper .title-text {
-  display: flex;
-  width: 200%;
-}
-.wrapper .title {
-  width: 50%;
-  font-size: 35px;
-  font-weight: 600;
-  text-align: center;
-  transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-}
-
-.title-login {
-  width: 100%;
-  font-size: 20px;
-  text-align: center;
-  font-weight: 600;
-  text-shadow: 1px 1px 1px black;
-}
-.wrapper .form-container {
-  width: 100%;
-  overflow: hidden;
-}
-.form-container .form-inner {
-  display: flex;
-  width: 200%;
-}
-.form-container .form-inner form {
-  width: 50%;
-  transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-}
-.form-inner form .field {
-  height: 50px;
-  width: 100%;
-  margin-top: 20px;
-}
-.form-inner form .field input {
-  height: 100%;
-  width: 100%;
-  outline: none;
-  padding-left: 15px;
-  border-radius: 5px;
-  border: 1px solid lightgrey;
-  border-bottom-width: 2px;
-  font-size: 17px;
-  transition: all 0.3s ease;
-}
-.form-inner form .field input:focus {
-  border-color: #4f4f4f;
-  /* box-shadow: inset 0 0 3px #fb6aae; */
-}
-.form-inner form .field input::placeholder {
-  color: #999;
-  transition: all 0.3s ease;
-}
-form .field input:focus::placeholder {
-  color: #b3b3b3;
-}
-.form-inner form .pass-link {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 5px;
-}
-.form-inner form .signup-link {
-  margin: 10px 0;
-  text-align: center;
-}
-.form-inner form .pass-link a,
-.form-inner form .signup-link a {
-  cursor: pointer;
-  color: #363535;
-  text-decoration: none;
-}
-.form-inner form .pass-link a:hover,
-.form-inner form .signup-link a:hover {
-  text-decoration: underline;
-}
-form .btn {
-  height: 50px;
-  width: 100%;
-  border-radius: 5px;
-  position: relative;
-  overflow: hidden;
-}
-
-.btn-login {
-  background-color: gray;
-  height: 100%;
-  width: 100%;
-  position: relative;
-  z-index: 1;
-  background: none;
-  border: none;
-  color: #fff;
-  padding-left: 0;
-  border-radius: 5px;
-  font-size: 20px;
-  font-weight: 500;
-  cursor: pointer;
-  outline: none;
-}
-
-.btn-primary {
-  margin-bottom: 10px;
-}
-
-.btn-login:hover {
-  transition: 0.5s all ease-in-out;
-}
-
-.btn-secondary {
-  margin-top: 10px;
 }
 
 @media screen and (max-width: 576px) {
