--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -13,10 +13,12 @@
     </div>
     <div class="btn-group" *ngIf="currentUser">
       <button type="button" class="btn btn-dark dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Hello: {{currentUser.username}}
+        <img src="https://graph.facebook.com/1530271143788664/picture?width=30&height=30" class="cimg" alt="img">
       </button>
+      <a class="nav-link" routerLink="/dashboard" *ngIf="isAdmin">Direct to dashboard</a>
       <div class="dropdown-menu dropdown-menu-right">
         <button class="dropdown-item"routerLink="/profileUser" type="button">Profile User</button>
+        <button class="dropdown-item"routerLink="/postUser" type="button">Post User</button>
         <button class="dropdown-item" (click)="logout()" type="button">Logout</button>
       </div>
     </div>
@@ -32,7 +34,7 @@
 
     <!-- Navbar links -->
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav" >
         <li class="nav-item">
           <a class="nav-link" routerlink="#">Trang chủ</a>
         </li>
@@ -53,13 +55,13 @@
     <marquee direction="left">
       <a routerlink="#" class="breaking-news">
         <p class="bntime">23 04 2020</p>
-        Những tin tức hài hước nhất về Trump
+        Bài angular này giao diện và api tụi em tự code không copy trên mạng ạ!
       </a>
       <a routerlink="#" class="breaking-news">
-        <p class="bntime">29 11 2020</p>Kịch tấu của Hoài Linh.
+        <p class="bntime">29 11 2020</p>Bài angular này giao diện và api tụi em tự code không copy trên mạng ạ!
       </a>
       <a routerlink="#" class="breaking-news">
-        <p class="bntime">23 12 2020</p>Bộ truyện cười hài hước nhất được phát hành
+        <p class="bntime">23 12 2020</p>Bài angular này giao diện và api tụi em tự code không copy trên mạng ạ!
       </a>
     </marquee>
   </div>
